apps/bgd/overlays/mwsit/mw-sit-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mw-sit
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
