apps/bgd/overlays/mwsit/mw-sit-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: configstore-connector
  name: configstore-connector
  namespace: mw-sit
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: configstore-connector
